chore: added integration tests for hotel search and filter + added exception handling
